--- a/app/.gitignore
+++ b/app/.gitignore
@@ -15,7 +15,72 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+.idea# ----------------------------------------
+# Node.js
+node_modules
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+# ----------------------------------------
+# Vite build outputs
+dist
+dist-ssr
+.vite
+
+# ----------------------------------------
+# Environment files (¡contienen datos sensibles!)
+.env
+.env.*.local
+.env.local
+
+# ----------------------------------------
+# Local config
+*.local
+
+# ----------------------------------------
+# System files
+.DS_Store
+Thumbs.db
+
+# ----------------------------------------
+# IDEs & Editors
+.vscode/*
+!.vscode/extensions.json  # permite compartir extensiones sugeridas
 .idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# ----------------------------------------
+# Coverage reports
+coverage/
+*.lcov
+
+# ----------------------------------------
+# Logs
+logs
+*.log
+
+# ----------------------------------------
+# Optional: Mac/Linux trash folders
+.trash/
+
+# ----------------------------------------
+# Optional: backups or temp
+*.bak
+*.tmp
+*.temp
+
+# ----------------------------------------
+# Optional: JetBrains IDEs
+out/
+
 .DS_Store
 *.suo
 *.ntvs*
