--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "bootstrap": "^5.3.6",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.511.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
